--- a/week6/style.css/page-grid.css
+++ b/week6/style.css/page-grid.css
@@ -2,16 +2,16 @@
     display: grid;
     justify-items: center;
     align-items: center;
-    width: 100vw;
-    height: 6vh;
+    width: 100%;
+    height: 8vh;
     background-color: rgb(216, 216, 216);
 }
 .main {
     display: grid;
     grid-template-columns: 2fr 1fr;
     text-align: center;
-    width: 100vw;
-    height: 70vh;
+    width: 100%;
+    height: 80vh;
 }
 .container {
     display: grid;
@@ -28,11 +28,11 @@
 }
 .footer {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     align-items: center;
     text-align: center;
     column-gap: 3%;
-    width: 100vw;
+    width: 100%;
     min-height: 15vh;
     background-color: rgb(224, 223, 223);
 }
@@ -53,7 +53,7 @@ body {
     background-color: rgb(255, 228, 177);
 }
 .footer_item {
-    background-color: aliceblue;
+    background-color: rgb(241, 243, 245);
     padding: 10% 15% 10% 15%;
     margin-left: 3%;
     margin-right: 3%;
