--- a/week7/responsive/page-grid.css
+++ b/week7/responsive/page-grid.css
@@ -12,23 +12,19 @@
     text-align: center;
     width: 100%;
     height: 80vh;
+    background-color: rgb(255, 249, 237);
 }
+
 .grid-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 46% 46%;
-    margin-left: 1%;
-    margin-right: 1%;
-    gap: 4% 3%;
-}
-.section {
-    display: grid;
-    padding-top: 2%;
-    background-color: rgb(255, 249, 237);
+    grid-template-rows: 2fr 1fr;
+    align-items: end;
+    column-gap: 1%;
 }
 .footer {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(4, 1fr);
     align-items: center;
     text-align: center;
     column-gap: 3%;
@@ -40,10 +36,29 @@ body {
     margin: 0%;
     font-weight: bold;
 }
+.grid__item_one {
+    grid-column: 1/2;
+    height: 40%;
+    margin-left: 2%;
+    margin-right: 2%;
+}
+.grid__item_two {
+    grid-column: 2/3;
+    height: 40%;
+    margin-left: 2%;
+    margin-right: 2%;
+}
 .grid__item_three {
+    grid-row: 2/3;
     grid-column: 1/3;
+    height: 80%;
+    margin-bottom: 1%;
+    margin-left: 1%;
+    margin-right: 1%;
 }
 .aside {
+    grid-column: 2/3;
+    grid-row: 1/3;
     background-color: rgb(215, 236, 215);
     padding-top: 5%;
 }
